fix splash layout, sequencer align issue, and button responsiveness

--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ h1 {
 
 /* main page */
 #wrapper {
+  visibility: hidden;
   margin: 0 auto;
   width: 90%;
   max-width: 800px;
@@ -200,14 +201,14 @@ select:hover {
   outline: none;
   border: 1.5px solid;
   border-radius: 1rem;
-  border-color: #373fff;
   font-size: 0.8rem;
   height: 2rem;
   min-width: 5rem;
-  color: #373fff;
   padding: 0 1rem 0 1rem;
-  background-color: #fff;
   margin-bottom: 0.5rem;
+  border-color: #373fff;
+  color: #373fff;
+  background-color: #fff;
 }
 #control-container button:hover {
   border: 1.5px solid;
@@ -459,10 +460,74 @@ a.logo:hover {
 }
 
 footer {
-  margin-top: 3rem;
+  margin-top: 1.5rem;
+  margin-bottom: 1rem;
   /* min-height: 15rem; */
 }
 footer p {
   margin: 0;
   text-align: center;
+}
+
+@media only screen and (max-width: 767px) {
+  #splash {
+    height: 80vh;
+  }
+  #splash-div {
+    padding: 0 2rem;
+    margin-top: 8rem;
+    /* background-color: #f00; */
+  }
+  p {
+    font-size: 0.8rem;
+  }
+
+  h1 {
+    margin-top: 0;
+    padding-top: 0;
+    font-size: 1.8rem;
+  }
+  #splash-div h2 {
+    font-size: 1.2rem;
+  }
+
+  #left-corner {
+    position: static;
+    /* margin-top: 1rem; */
+    /* left: 1.8rem; */
+    /* bottom: 1.5rem; */
+  }
+  #right-corner {
+    position: static;
+    /* right: 2rem; */
+    /* bottom: 1.5rem; */
+  }
+  #more-details-container {
+    display: none;
+  }
+
+  #control-div {
+    /* min-width: 10rem; */
+  }
+  #control-container button {
+    outline: none;
+    display: block;
+    border: 1.5px solid;
+    border-radius: 0.9rem;
+    font-size: 0.8rem;
+    height: 1.8rem;
+    /* min-width: 3rem; */
+    width: 7rem;
+    /* padding: 0; */
+    padding: 0 0.7rem 0 0.7rem;
+    margin-bottom: 0.5rem;
+    border-color: #373fff;
+    color: #373fff;
+    background-color: #fff;
+  }
+  #control-container button:hover {
+    border-color: #373fff;
+    color: #373fff;
+    background-color: #fff;
+  }
 }
